apply plugin: 'java'
apply plugin: 'com.github.johnrengelman.shadow'

version = '2.0'

// Add Gradle OneJar Plugin, see https://github.com/rholder/gradle-one-jar
buildscript {
  repositories {
    jcenter()
  }

  dependencies {
    classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.1'
  }
}

sourceCompatibility = '1.10'
targetCompatibility = '1.10'

sourceSets.main.java.srcDirs = [ 'java' ]
sourceSets.main.resources.srcDirs = [ 'res' ]

repositories {
	mavenCentral()
}

dependencies {
	compile 'commons-codec:commons-codec:1.9',
		'org.apache.commons:commons-collections4:4.1',
	    'org.apache.commons:commons-dbcp2:2.1.1',
	    'org.apache.commons:commons-lang3:3.6',
		'com.fasterxml.jackson.core:jackson-databind:2.9.1',
		'ch.qos.logback:logback-classic:1.2.3'
	        
	runtime 'mysql:mysql-connector-java:5.1.44'
}

// Builds a single fat jar.
shadowJar {
  mergeServiceFiles()
  exclude 'META-INF/*.DSA'
  exclude 'META-INF/*.RSA'
}
